[#69564] Fix A11y in Workflows, Permissions Report
- Provides labels for matrix checkboxes that clearly describe the
  purpose of each control.

- Improves "toggle all" button labeling and "Check all"/"Uncheck all"
  link tooltips to clearly indicate consequences. Also adds these
  tooltips to Role edit page for consistency.
- Improves truncation of text in row headers by displaying an "ellipsis"
  and an expander control that allows a user to click to see the full
  text. It introduces a `TruncationController` Stimulus Controller to
  add behavior to Primer `Truncation` and `HiddenTextExpander`
  components.

This commit also:

- Primerizes the checkboxes.
- Harmonizes the positioning of the column "toggle all" button (moved to
  left-hand side).
- Makes numerous small spacing fixes to improve alignment of headers and
  checkboxes.

--- a/frontend/src/global_styles/primer/_overrides.sass
+++ b/frontend/src/global_styles/primer/_overrides.sass
@@ -136,3 +136,15 @@ ul.SegmentedControl,
   // we override ordering to display help text after the asterisk
   > .op-attribute-help-text
     order: 1
+
+.Truncate
+  &.Truncate--expanded
+    max-width: none
+    min-width: 0
+    overflow: visible
+    white-space: normal
+
+    .Truncate-text
+      white-space: normal
+      overflow: visible
+      text-overflow: clip
